# auxtools

./: .editorconfig  .gitattributes  .gitignore  .rustfmt.toml  .xwin-manifest  CNAME  Cargo.toml  LICENSE  README.md  crates.js  flake.nix  help.html  index.html  search-index.js  settings.html  source-files.js
auxcov/: Cargo.toml  all.html  index.html
auxcov/src/: codecov.rs  lib.rs
auxtools/: Cargo.toml  all.html  attr.full_shutdown.html  attr.hook.html  attr.init.html  attr.runtime_handler.html  attr.shutdown.html  build.rs  constant.BYONDCORE.html  index.html  macro.byond_ffi_fn!.html  macro.byond_ffi_fn.html  macro.byond_string!.html  macro.byond_string.html  macro.find_signature!.html  macro.find_signature.html  macro.find_signature_inner!.html  macro.find_signature_inner.html  macro.find_signatures!.html  macro.find_signatures.html  macro.pin_dll!.html  macro.pin_dll.html  macro.runtime!.html  macro.runtime.html  macro.signature.html  macro.signature_struct!.html  macro.signature_struct.html  macro.signatures!.html  macro.signatures.html  macro.universal_signature!.html  macro.universal_signature.html  macro.version_dependent_signature!.html  macro.version_dependent_signature.html  sidebar-items.js  static.PIN_DLL.html  struct.List.html  struct.Proc.html  struct.Runtime.html  struct.StringRef.html  struct.Value.html  (+2 more)
auxtools-impl/: Cargo.toml
auxtools-impl/src/: lib.rs
auxtools/debug/: index.html  sidebar-items.js  struct.CallStacks.html  struct.StackFrame.html
auxtools/list/: struct.List.html
auxtools/proc/: struct.Proc.html
auxtools/raw_types/: index.html  sidebar-items.js
auxtools/raw_types/funcs/: fn.append_to_list.html  fn.call_datum_proc_by_name.html  fn.call_proc_by_id.html  fn.create_list.html  fn.dec_ref_count.html  fn.get_assoc_element.html  fn.get_length.html  fn.get_misc_by_id.html  fn.get_proc_array_entry.html  fn.get_string_id.html  fn.get_string_table_entry.html  fn.get_variable.html  fn.inc_ref_count.html  fn.remove_from_list.html  fn.set_assoc_element.html  fn.set_variable.html  fn.to_string.html  index.html  sidebar-items.js  static.CURRENT_EXECUTION_CONTEXT.html  static.SUSPENDED_PROCS.html  static.SUSPENDED_PROCS_BUFFER.html  static.VARIABLE_NAMES.html  static.append_to_list_byond.html  static.call_datum_proc_by_name_byond.html  static.call_proc_by_id_byond.html  static.create_list_byond.html  static.dec_ref_count_byond.html  static.get_assoc_element_byond.html  static.get_length_byond.html  static.get_misc_by_id_byond.html  static.get_proc_array_entry_byond.html  static.get_string_id_byond.html  static.get_string_table_entry_byond.html  static.get_variable_byond.html  static.inc_ref_count_byond.html  static.remove_from_list_byond.html  static.runtime_byond.html  static.set_assoc_element_byond.html  static.set_variable_byond.html  (+1 more)
auxtools/raw_types/lists/: index.html  sidebar-items.js  struct.AssociativeListEntry.html  struct.List.html  struct.ListId.html
auxtools/raw_types/misc/: fn.get_bytecode.html  fn.get_locals.html  fn.get_parameters.html  fn.set_bytecode.html  index.html  sidebar-items.js  struct.BytecodeId.html  struct.Bytecode_V1.html  struct.Bytecode_V2.html  struct.LocalsId.html  struct.Locals_V1.html  struct.Locals_V2.html  struct.MiscId.html  struct.ParametersData.html  struct.ParametersId.html  struct.Parameters_V1.html  struct.Parameters_V2.html  trait.AsMiscId.html  union.Misc_V1.html  union.Misc_V2.html
auxtools/raw_types/procs/: index.html  sidebar-items.js  struct.ExecutionContext.html  struct.ProcEntry.html  struct.ProcId.html  struct.ProcInstance.html  struct.SuspendedProcs.html  struct.SuspendedProcsBuffer.html
auxtools/raw_types/strings/: index.html  sidebar-items.js  struct.StringEntry.html  struct.StringId.html  struct.VariableId.html
auxtools/raw_types/values/: enum.ValueTag.html  index.html  sidebar-items.js  struct.Value.html  (+1 more)
auxtools/runtime/: struct.Runtime.html  type.DMResult.html
auxtools/sigscan/: index.html  macro.convert_signature!.html  macro.convert_signature.html  sidebar-items.js  struct.Scanner.html
auxtools/src/: byond_ffi.rs  bytecode_manager.rs  callback.rs  context.rs  debug.rs  disassembler.rs  hooks.cpp  hooks.h  hooks.rs  init.rs  lib.rs  list.rs  maptick.rs  proc.rs  raw_types.rs  runtime.rs  sigscan.rs  string.rs  string_intern.rs  value.rs  value_from.rs  version.rs  weak_value.rs
auxtools/string/: struct.StringRef.html
auxtools/value/: struct.Value.html
auxtools/weak_value/: struct.WeakValue.html
debug_server/: Cargo.toml  all.html  build.rs  index.html  sidebar-items.js  static.DEBUG_SERVER.html
debug_server/src/: assemble_env.rs  ckey_override.rs  cobertura.rs  codecov.rs  crash_handler_windows.rs  execute_instruction_data.cpp  execute_instruction_hook.S  execute_instruction_hook.asm  execute_instruction_hook.unix.S  execute_instruction_hook.windows.S  execute_instruction_hook.windows.asm  execute_instruction_hook_windows.S  init_hook.windows.asm  init_hook.windows.s  init_hook_data.cpp  init_hooking.rs  instruction_hooking.rs  lib.rs  list_allocs.rs  mem_profiler.rs  mem_profiler_stub.rs  profiler.rs  server.rs  server_types.rs  stddef.rs
dm/: Cargo.toml  build.rs
dm/src/: byond_ffi.rs  callback.rs  context.rs  debug.rs  disassembler.rs  hooks.cpp  hooks.h  hooks.rs  hooks_opcode.asm  init.rs  lib.rs  list.rs  proc.rs  runtime.rs  string.rs  value.rs
instruction_hooking/: Cargo.toml  all.html  build.rs  constant.INSTRUCTION_HOOKS.html  index.html  sidebar-items.js  trait.InstructionHook.html  trait.InstructionHookToAny.html
instruction_hooking/disassemble_env/: index.html  sidebar-items.js  struct.DisassembleEnv.html
instruction_hooking/src/: disassemble_env.rs  execute_instruction_data.cpp  execute_instruction_hook.windows.S  execute_instruction_hook.windows.asm  lib.rs
sigscan/: Cargo.toml
sigscan/src/: lib.rs  linux.rs  windows.rs
src/dm/: Cargo.toml  build.rs  byond_ffi.rs  context.rs  global_state.rs  hooks.rs  lib.rs  list.rs  proc.rs  raw_types.rs  string.rs  value.rs
tests/auxsigcheck/: Cargo.toml
tests/test_runner/: Cargo.toml
(+173 files in other folders)
