[workspace]
members = ["auxcov", "auxtools", "auxtools-impl", "debug_server", "instruction_hooking", "tests/auxtest", "tests/byond_get", "tests/test_runner"]
resolver = "2"

[workspace.package]
authors = ["Sophie Wallace <sophie@wiox.me>", "Lucy <lucy@absolucy.moe>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/wilox/auxtools"
rust-version = "1.76"
version = "0.1.0"

[workspace.dependencies]
lazy_static = "1"
detour = { version = "0.8", default-features = false }
dmasm = { git = "https://github.com/willox/dmasm", tag = "515-support" }

[workspace.lints.rust]
static_mut_refs = "allow"

[workspace.lints.clippy]
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
missing_const_for_fn = "warn"
missing_safety_doc = "allow"
missing_transmute_annotations = "allow"
type_complexity = "allow"

[profile.release]
opt-level = 3
lto = 'thin'
codegen-units = 1
incremental = true
debug = true
