[package]
name = "auxcov"
version = "1.0.0"
authors = ["Jordan Dominion <Cyberboss@users.noreply.github.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
auxtools = { path = "../auxtools" }
instruction_hooking = { path = "../instruction_hooking" }
dmasm = { git = "https://github.com/willox/dmasm" }
grcov = "0.8.18"
