[package]
name = "auxcov"
version = "1.0.0"
authors = ["Jordan Dominion <Cyberboss@users.noreply.github.com>"]
publish = false
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
auxtools = { path = "../auxtools" }
instruction_hooking = { path = "../instruction_hooking" }
dmasm = { workspace = true }
grcov = "0.8"

[lints]
workspace = true
