[package]
name = "auxtools-impl"
description = "procedural macros for use with the auxtools crate"
version = "0.1.0"
authors = ["Aspen <luxx4x@protonmail.com>", "William Wallace <me@wiox.me>"]
license = "MIT"
repository = "https://github.com/willox/auxtools"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.34"
quote = "1.0.10"
hex = "0.4.3"

[dependencies.syn]
version = "1.0.83"
features = ["full"]
