[package]
name = "auxtools-impl"
description = "procedural macros for use with the auxtools crate"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
hex = "0.4"

[dependencies.syn]
version = "1.0"
features = ["full"]
