[package]
name = "auxtools-impl"
description = "procedural macros for use with the auxtools crate"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true
doctest = false

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
hex = "0.4"
syn = { version = "2", features = ["full"] }

[lints]
workspace = true
