[package]
name = "auxtools"
description = "library for interfacing with low-level BYOND internals"
version = "0.1.0"
authors = ["William Wallace <me@wiox.me>"]
license = "MIT"
repository = "https://github.com/willox/auxtools"
edition = "2018"

[build-dependencies]
cc = "1.0"

[dependencies]
auxtools-impl = { path = "../auxtools-impl", version = "0.1.0", package = "auxtools-impl" }
once_cell = "1.15.0"
inventory = "0.3.2"
lazy_static = "1.4.0"
dashmap = "5.4.0"
ahash = "0.8.0"
fxhash = "0.2.1"
ctor = "0.1.26"

[dependencies.detour2]
version = "0.9.0"
default-features = false

[target.'cfg(windows)'.dependencies]
windows = { version = "0.43.0", features = [ "Win32_System_Threading", "Win32_System_LibraryLoader", "Win32_Foundation", "Win32_System_ProcessStatus", "Win32_System_Diagnostics_Debug", "Win32_System_Kernel"]}


[target.'cfg(unix)'.dependencies]
libc = "0.2"
