[package]
name = "auxtools"
description = "library for interfacing with low-level BYOND internals"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["lib", "cdylib"]

[build-dependencies]
cc = "1.0"

[dependencies]
auxtools-impl = { path = "../auxtools-impl", version = "0.1.0", package = "auxtools-impl" }
once_cell = "1.10.0"
inventory = "0.2.3"
lazy_static = "1.4.0"
dashmap = "3.11.10"
ahash = "0.7.6"
fxhash = "0.2.1"
ctor = "0.1.22"

[dependencies.detour]
version = "0.8.1"
default-features = false

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "libloaderapi", "psapi", "processthreadsapi"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
