[package]
name = "debug_server"
version = "2.2.3"
authors = ["William Wallace <me@wiox.me>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cc = "1.0"

[dependencies]
auxtools = { path = "../auxtools" }
lazy_static = "1.4.0"
serde = { version = "1.0.141", features = ["derive"] }
bincode = "1.3.3"
clap = "3.2.16"
dmasm = { git = "https://github.com/willox/dmasm" }
region = "3.0.0"
fxhash = "0.2.1"
flume = "0.10.14"
ahash = "0.7.6"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "libloaderapi", "errhandlingapi"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dependencies.detour]
version = "0.8.1"
default-features = false
