[package]
name = "debug_server"
version = "2.2.3"
authors = ["William Wallace <me@wiox.me>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cc = "1.0"

[dependencies]
auxtools = { path = "../auxtools" }
lazy_static = "1.4.0"
serde = { version = "1.0.147", features = ["derive"] }
bincode = "1.3.3"
clap = "4.0.18"
dmasm = { git = "https://github.com/willox/dmasm" }
region = "3.0.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.46.0", features = [ "Win32_System_Threading", "Win32_System_LibraryLoader", "Win32_Foundation"]}

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dependencies.detour]
version = "0.8.1"
default-features = false
