[package]
name = "debug_server"
version = "2.3.4"
publish = false
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
auxtools = { path = "../auxtools" }
instruction_hooking = { path = "../instruction_hooking" }
lazy_static = { workspace = true }
serde = { version = "1", features = ["derive"] }
bincode = "1"
clap = "3"
dmasm = { workspace = true }
region = "3"
detour = { workspace = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "libloaderapi", "errhandlingapi"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[lints]
workspace = true
