[package]
name = "dm"
version = "0.1.0"
authors = ["William Wallace <me@wiox.me>"]
edition = "2018"

[build-dependencies]
cc = "1.0"

[dependencies]
dm-impl = { path = "../dm-impl" }
sigscan = { path = "../sigscan" }
once_cell = "1.4"
inventory = "0.1"
lazy_static = "1.4.0"

[dependencies.detour]
version = "0.7"
default-features = false

[target.'cfg(windows)'.dependencies]
msgbox = "0.4"
winapi = "0.3.9"
