[package]
name = "instruction_hooking"
version = "1.0.0"
authors = ["William Wallace <me@wiox.me>", "Jordan Dominion <Cyberboss@users.noreply.github.com>"]
edition = "2018"
publish = false

[build-dependencies]
cc = "1.0"

[dependencies]
auxtools = { path = "../auxtools" }
dmasm = { git = "https://github.com/willox/dmasm" }
detour = { version = "0.8.1", default-features = false }
symbolic-common = "12.1"
symbolic-demangle = { version = "12.1", default-features = false }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "libloaderapi", "errhandlingapi"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
