[package]
name = "sigscan"
version = "0.1.0"
authors = ["William Wallace <me@wiox.me>"]
edition = "2018"

[dependencies]
dm-impl = { path = "../dm-impl" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "libloaderapi", "psapi", "processthreadsapi"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
