[package]
name = "dm"
version = "0.1.0"
authors = ["William Wallace <me@wiox.me>"]
edition = "2018"

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
dm-impl = { path = "../dm-impl" }
sigscan = { path = "../sigscan" }
once_cell = "1.4"
detour = "0.7"
msgbox = "0.4"
rand = "0.7"
phf = { version = "0.8", features = ["macros"] }
