[package]
name = "dm"
version = "0.1.0"
authors = ["William Wallace <me@wiox.me>"]
edition = "2018"

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[build-dependencies]
cc = "1.0.61"

[dependencies]
dm-impl = { path = "../dm-impl" }
sigscan = { path = "../sigscan" }
once_cell = "1.4"
rand = "0.7"
phf = { version = "0.8", features = ["macros"] }
inventory = "0.1.9"

[dependencies.detour]
version = "0.7"
default-features = false

[target.'cfg(windows)'.dependencies]
msgbox = "0.4"
